home pade 75% done

--- a/about.html
+++ b/about.html
@@ -113,53 +113,53 @@
       <!--== End Page Title Area ==-->
 
       <!--== Start About Area ==-->
-      <section class="about-area">
+      <section class="about-area about-default-area">
         <div class="container">
           <div class="row">
             <div class="col-lg-9">
-              <div class="section-title">
+              <div class="section-title position-relative z-index-1" data-aos="fade-up" data-aos-duration="1000">
                 <h5 class="subtitle line-theme-color">About Us.</h5>
                 <h2 class="title"><span>MR Leos</span> Welcome to the Leo Club of Moratuwa Rathmalana.</h2>
               </div>
             </div>
           </div>
           <div class="row">
-            <div class="col-lg-4">
-              <div class="thumb thumb-style">
-                <img src="assets/img/about/3.jpg" alt="Image-Givest">
-              </div>
-            </div>
-            <div class="col-lg-8">
-              <div class="about-content">
-                <p class="text-style">Lorem Ipsum simply dummy text the printing and typesettin industry. Lorem Ipsum
-                  has been the industry's standard dumm text ever since the unknown.</p>
-                <p class="mb-0">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
-                  has been the industry's standard dummy text ever since the 1500s, when and unknown printer took a
-                  galley of type and scrambled it to make a type specimen book.</p>
-              </div>
-              <div class="content-box-wrp">
-                <div class="row">
-                  <div class="col-lg-6">
-                    <div class="content-box-item mb-md-30">
-                      <h3 class="title">Mission</h3>
-                      <img class="img-line-shape" src="assets/img/shape/line-s1.png" alt="Image-Givest">
-                      <p>Empower the youth with self-driven, practical experiences and opportunities to transform their
-                        lives and develop
-                        leadership qualities while volunteering in serving the community.</p>
-                      <!-- <p class="font-family2 mb-0">Lorem Ipsum simply dummy text the printing & typesetting industry been the industry standard dummy make type specimen book.</p> -->
-                      <img class="bg-line-shape" src="assets/img/shape/line5.png" alt="Image-Givest">
+            <div class="col-lg-6 col-xl-7">
+              <div class="layer-style" data-aos="fade-up" data-aos-duration="1100">
+                <div class="thumb">
+                  <div class="row m-0">
+                    <div
+                      class="col-sm-4 col-md-4 col-lg-4 col-xl-4 p-0 d-none d-sm-block d-lg-none d-xl-block tilt-animation">
+                      <img src="assets/img/about/1.jpg" alt="Image-Givest">
                     </div>
-                  </div>
-                  <div class="col-lg-6">
-                    <div class="content-box-item" data-bg-color="#98FB98">
-                      <h3 class="title">Vission</h3>
-                      <img class="img-line-shape" src="assets/img/shape/line-s1.png" alt="Image-Givest">
-                      <p>create a community of global leaders.</p>
-                      <!-- <p class="font-family2 mb-0">Lorem Ipsum simply dummy text the printing & typesetting industry been the industry standard dummy make type specimen book.</p> -->
-                      <img class="bg-line-shape" src="assets/img/shape/line5.png" alt="Image-Givest">
+                    <div class="col-sm-8 col-md-8 col-lg-12 col-xl-8 p-0 tilt-animation">
+                      <img class="img-two" src="assets/img/about/2.jpg" alt="Image-Givest">
                     </div>
                   </div>
                 </div>
+              </div>
+            </div>
+            <div class="col-lg-6 col-xl-5">
+              <div class="about-content" data-aos="fade-up" data-aos-duration="1100">
+                <p class="text-style">The power to turn a vision into reality is what makes a person a leader.</p>
+                <p>The Moratuwa-Rathmalana Leo Club is one of the greatest in Leo District 306A1. From the beginning, Sri
+                  Lanka has been
+                  associated with Leo Multiple District 306, Sri Lanka.
+                  The Leo Club of Moratuwa-Rathmalana was founded on June 12, 1970, with the Lions Club of
+                  Moratuwa-Rathamalana in
+                  District 306 A1 providing sponsorship.</p>
+                <p class="mb-0">So far, we've accomplished a lot under the leadership and guidance of many people, and we're
+                  still committed to
+                  maintaining our high standards with 50+ years of excellence.</p>
+                <ul class="list-icon-style">
+                  <li><img class="icon-img" src="assets/img/icons/check-double-line.png" alt="Image-Givest">
+                    Right decision shows <br>excellent leadership.</li>
+                  <li class="line-center"></li>
+                  <li><img class="icon-img" src="assets/img/icons/check-double-line.png" alt="Image-Givest"> By the community,
+                    <br>for the community.</li>
+                </ul>
+                <a href="contact.html" class="btn-theme btn-gradient btn-slide">Contact Us <img class="icon icon-img"
+                    src="assets/img/icons/arrow-line-right2.png" alt="Icon"></a>
               </div>
             </div>
           </div>
@@ -280,7 +280,7 @@
       <!--== Start Funfact Area ==-->
       <section class="funfact-area funfact-default-area">
         <div class="container">
-          <div class="row row-gutter-0 funfact-items-style1">
+          <div class="row row-gutter-0 funfact-items-style1" data-aos="fade-up" data-aos-duration="1000">
             <div class="col-sm-6 col-md-4 funfact-item">
               <div class="inner-content">
                 <div class="icon-box">
@@ -289,10 +289,10 @@
                 </div>
                 <div class="content">
                   <div class="number">
-                    <h2><span class="counter-animate">598</span>K</h2>
+                    <h2><span class="counter-animate">30</span>+</h2>
                   </div>
                   <img class="line-shape" src="assets/img/shape/funfact-line1.png" alt="Image-Givest">
-                  <p class="title">// Poor People</p>
+                  <p class="title">Active Members</p>
                 </div>
               </div>
             </div>
@@ -304,10 +304,10 @@
                 </div>
                 <div class="content">
                   <div class="number">
-                    <h2><span class="counter-animate">897</span>M</h2>
+                    <h2><span class="counter-animate">50</span>+</h2>
                   </div>
                   <img class="line-shape" src="assets/img/shape/funfact-line1.png" alt="Image-Givest">
-                  <p class="title">// Fund raised</p>
+                  <p class="title">Projects</p>
                 </div>
               </div>
             </div>
@@ -319,10 +319,10 @@
                 </div>
                 <div class="content">
                   <div class="number">
-                    <h2><span class="counter-animate">998</span>+</h2>
+                    <h2><span class="counter-animate">50</span>+</h2>
                   </div>
                   <img class="line-shape" src="assets/img/shape/funfact-line1.png" alt="Image-Givest">
-                  <p class="title">// Active Member</p>
+                  <p class="title">Awards</p>
                 </div>
               </div>
             </div>
@@ -504,12 +504,13 @@
                   <a class="footer-logo" href="index.html">
                     <img src="assets/img/logo.png" alt="Logo">
                   </a>
-                  <p>Lorem Ipsum is simply dummy text of the industry orem Ipsum has been the industry's since the when
-                    unknown.</p>
-                  <div class="widget-total-raised">
-                    <h4 class="raised-title">Total Raised:</h4>
-                    <div class="raised-amount">$8,965</div>
-                  </div>
+                  <p>The Moratuwa-Rathmalana Leo Club is one of the greatest in Leo District 306 A1, founded on June 12,
+                    1970.</p>
+                  <p>Leo Club of Moratuwa-Rathamalana has been serving the community for over 50 years.</p>
+                  <!-- <div class="widget-total-raised">
+                        <h4 class="raised-title">Total Raised:</h4>
+                        <div class="raised-amount">$8,965</div>
+                      </div> -->
                 </div>
               </div>
             </div>
@@ -565,24 +566,24 @@
                   <div class="row">
                     <div class="col-6 col-sm-6 col-md-6 pr-sm-5">
                       <ul class="nav-menu nav">
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="about.html">About Us</a></li>
-                        <li><a href="blog.html">Blog Post Terms</a></li>
-                        <li><a href="#/">Conditions</a></li>
-                        <li><a href="#/">Privacy Policy</a></li>
-                        <li><a href="#/">Documentation</a></li>
-                        <li><a href="#/">Donners</a></li>
+                        <li><a href="projects.html">Projects</a></li>
+                        <li><a href="event-details.html">Events</a></li>
+                        <li><a href="committee.html">Committee</a></li>
+                        <li><a href="contact.html">Contact US</a></li>
                       </ul>
                     </div>
-                    <div class="col-6 col-sm-6 col-md-6 pl-sm-5">
-                      <ul class="nav-menu nav align-right">
-                        <li><a href="volunteer.html">Become Volunteer</a></li>
-                        <li><a href="#/">Quick Fundraise</a></li>
-                        <li><a href="#/">Give Donation</a></li>
-                        <li><a href="volunteer.html">Become Volunteer</a></li>
-                        <li><a href="causes-details.html">Food And Water</a></li>
-                        <li><a href="causes-details.html">Medical facilities</a></li>
-                      </ul>
-                    </div>
+                    <!-- <div class="col-6 col-sm-6 col-md-6 pl-sm-5">
+                          <ul class="nav-menu nav align-right">
+                            <li><a href="volunteer.html">Become Volunteer</a></li>
+                            <li><a href="#/">Quick Fundraise</a></li>
+                            <li><a href="#/">Give Donation</a></li>
+                            <li><a href="volunteer.html">Become Volunteer</a></li>
+                            <li><a href="causes-details.html">Food And Water</a></li>
+                            <li><a href="causes-details.html">Medical facilities</a></li>
+                          </ul>
+                        </div> -->
                   </div>
                 </nav>
               </div>
@@ -598,8 +599,8 @@
             <div class="row align-items-center">
               <div class="col-12">
                 <div class="widget-copyright text-center">
-                  <p>© 2025 <span>Givest</span>. Made with <i class="icon_heart"></i> by <a target="_blank"
-                      href="https://www.hasthemes.com">HasThemes</a></p>
+                  <p>copyright © 2021 <span>Leo Club of Moratuwa Ratmalana</span> | <a target="_blank"
+                      href="https://www.leos.moratuwaratmalana.lk">Developed MRLeos IT Team</a></p>
                 </div>
               </div>
             </div>
