--- a/projects.html
+++ b/projects.html
@@ -352,7 +352,7 @@
       <!--== Start Funfact Area ==-->
       <section class="funfact-area funfact-default-area">
         <div class="container">
-          <div class="row row-gutter-0 funfact-items-style1">
+          <div class="row row-gutter-0 funfact-items-style1" data-aos="fade-up" data-aos-duration="1000">
             <div class="col-sm-6 col-md-4 funfact-item">
               <div class="inner-content">
                 <div class="icon-box">
@@ -361,10 +361,10 @@
                 </div>
                 <div class="content">
                   <div class="number">
-                    <h2><span class="counter-animate">598</span>K</h2>
+                    <h2><span class="counter-animate">30</span>+</h2>
                   </div>
                   <img class="line-shape" src="assets/img/shape/funfact-line1.png" alt="Image-Givest">
-                  <p class="title">// Poor People</p>
+                  <p class="title">Active Members</p>
                 </div>
               </div>
             </div>
@@ -376,10 +376,10 @@
                 </div>
                 <div class="content">
                   <div class="number">
-                    <h2><span class="counter-animate">897</span>M</h2>
+                    <h2><span class="counter-animate">50</span>+</h2>
                   </div>
                   <img class="line-shape" src="assets/img/shape/funfact-line1.png" alt="Image-Givest">
-                  <p class="title">// Fund raised</p>
+                  <p class="title">Projects</p>
                 </div>
               </div>
             </div>
@@ -391,10 +391,10 @@
                 </div>
                 <div class="content">
                   <div class="number">
-                    <h2><span class="counter-animate">998</span>+</h2>
+                    <h2><span class="counter-animate">50</span>+</h2>
                   </div>
                   <img class="line-shape" src="assets/img/shape/funfact-line1.png" alt="Image-Givest">
-                  <p class="title">// Active Member</p>
+                  <p class="title">Awards</p>
                 </div>
               </div>
             </div>
@@ -557,12 +557,13 @@
                   <a class="footer-logo" href="index.html">
                     <img src="assets/img/logo.png" alt="Logo">
                   </a>
-                  <p>Lorem Ipsum is simply dummy text of the industry orem Ipsum has been the industry's since the when
-                    unknown.</p>
-                  <div class="widget-total-raised">
-                    <h4 class="raised-title">Total Raised:</h4>
-                    <div class="raised-amount">$8,965</div>
-                  </div>
+                  <p>The Moratuwa-Rathmalana Leo Club is one of the greatest in Leo District 306 A1, founded on June 12,
+                    1970.</p>
+                  <p>Leo Club of Moratuwa-Rathamalana has been serving the community for over 50 years.</p>
+                  <!-- <div class="widget-total-raised">
+                        <h4 class="raised-title">Total Raised:</h4>
+                        <div class="raised-amount">$8,965</div>
+                      </div> -->
                 </div>
               </div>
             </div>
@@ -570,7 +571,7 @@
               <div class="widget-item">
                 <h4 class="widget-title line-style">Gallery</h4>
                 <div class="widget-gallery">
-                  <div class="row row-cols-3 row-gutter-10">
+                  <div class="row row-cols-2 row-gutter-10">
                     <div class="col">
                       <div class="gallery-item">
                         <img src="assets/img/photos/gallery1.jpg" alt="Givest-HasTech">
@@ -618,24 +619,24 @@
                   <div class="row">
                     <div class="col-6 col-sm-6 col-md-6 pr-sm-5">
                       <ul class="nav-menu nav">
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="about.html">About Us</a></li>
-                        <li><a href="blog.html">Blog Post Terms</a></li>
-                        <li><a href="#/">Conditions</a></li>
-                        <li><a href="#/">Privacy Policy</a></li>
-                        <li><a href="#/">Documentation</a></li>
-                        <li><a href="#/">Donners</a></li>
+                        <li><a href="projects.html">Projects</a></li>
+                        <li><a href="event-details.html">Events</a></li>
+                        <li><a href="committee.html">Committee</a></li>
+                        <li><a href="contact.html">Contact US</a></li>
                       </ul>
                     </div>
-                    <div class="col-6 col-sm-6 col-md-6 pl-sm-5">
-                      <ul class="nav-menu nav align-right">
-                        <li><a href="volunteer.html">Become Volunteer</a></li>
-                        <li><a href="#/">Quick Fundraise</a></li>
-                        <li><a href="#/">Give Donation</a></li>
-                        <li><a href="volunteer.html">Become Volunteer</a></li>
-                        <li><a href="causes-details.html">Food And Water</a></li>
-                        <li><a href="causes-details.html">Medical facilities</a></li>
-                      </ul>
-                    </div>
+                    <!-- <div class="col-6 col-sm-6 col-md-6 pl-sm-5">
+                          <ul class="nav-menu nav align-right">
+                            <li><a href="volunteer.html">Become Volunteer</a></li>
+                            <li><a href="#/">Quick Fundraise</a></li>
+                            <li><a href="#/">Give Donation</a></li>
+                            <li><a href="volunteer.html">Become Volunteer</a></li>
+                            <li><a href="causes-details.html">Food And Water</a></li>
+                            <li><a href="causes-details.html">Medical facilities</a></li>
+                          </ul>
+                        </div> -->
                   </div>
                 </nav>
               </div>
@@ -651,8 +652,8 @@
             <div class="row align-items-center">
               <div class="col-12">
                 <div class="widget-copyright text-center">
-                  <p>© 2025 <span>Givest</span>. Made with <i class="icon_heart"></i> by <a target="_blank"
-                      href="https://www.hasthemes.com">HasThemes</a></p>
+                  <p>copyright © 2021 <span>Leo Club of Moratuwa Ratmalana</span> | <a target="_blank"
+                      href="https://www.leos.moratuwaratmalana.lk">Developed MRLeos IT Team</a></p>
                 </div>
               </div>
             </div>
@@ -734,97 +735,7 @@
 
   <!--=== Custom Js ===-->
   <script src="assets/js/custom.js"></script>
-  <script>
-
-    var token = "EAAKix4m9HeQBAEC5PQKyTZBm0PVzO9x92WObzlDMwlQ50IpMjQNDJlsf06KXNemwowp0mHZBdIyMh94TC8DbYpT8JemcOKjbOHxHP4fO7U3cq7ZClmI17s2DjJCVGPfOZAsAMMTh9ONr92SpJ1OnOkR3RDlatCXWg5KY1SNMTRcaACMoFKZB3";
-    window.fbAsyncInit = function () {
-      FB.init({
-        appId: '741927846485476',
-        autoLogAppEvents: true,
-        xfbml: true,
-        version: 'v4.0'
-      });
-      FB.api(
-        '/leoclubofmoratuwarathmalana/albums?fields=description,picture.height(2048),created_time,name,comments,count,cover_photo,likes',
-        'GET',
-        {},
-        function (response) {
-
-          var count = Object.keys(response.data).length;
-          console.log(count);
-          var html = '';
-          for (let i = 0; i <= 6; i++) {
-            var AlbumDescription = response.data[i].description;
-
-            if (AlbumDescription.includes("Summary")) {
-              //Get summary
-              var projectSummaryTemp = AlbumDescription.split('|')[0];
-              var projectSummary = projectSummaryTemp.split(':')[1];
-              console.log('summaryTemp' + projectSummary);
-              //Get Project Date
-              var projectDateTemp = AlbumDescription.split('|')[2];
-              var projectDate = projectDateTemp.split(':')[1];
-              var projectYear = projectDate.split('/')[2];
-              var projectMonth = projectDate.split('/')[1];
-              console.log('Date is' + projectMonth);
-              //
-            }
-
-            if (response.data[i].name === 'Cover Photos' || response.data[i].name === 'Mobile Uploads' || response.data[i].name === 'Timeline Photos' || response.data[i].name === 'Profile Pictures') {
-              console.log('here we are');
-            } else {
-              if (projectDateTemp === "") {
-                var datee = response.data[i].created_time;
-                var albumYear = datee.split('-')[0];
-                var albumMonth = datee.split('-')[1];
-                var albumDayTime = datee.split('-',)[2];
-                var albumDay = albumDayTime.split('T')[0];
-                var albumDate = albumYear + '/' + albumMonth + '/' + albumDay;
-                console.log('ccc' + albumDate);
-              }
-
-
-              html += '<div class="col-md-6 col-lg-4">';
-              html += '<div class="causes-item mb-md-30">';
-              html += '<div class="thumb">';
-              html += '<img src="https://graph.facebook.com/' + response.data[i].cover_photo.id + '/picture?type=normal&access_token=' + token + '" alt="demo">';
-              html += '</div>';
-              html += '  <div class="content">';
-              html += '    <ul class="donate-info">';
-              html += '     <li class="info-item">';
-              html += '       <span class="info-title">Year:</span>';
-              html += '       <span class="amount">' + projectYear + '</span>';
-              html += '     </li>';
-              html += '     <li class="info-item">';
-              html += '    <span class="info-title">Month:</span>';
-              html += '    <span class="amount">' + projectMonth + '</span>';
-              html += '  </li>';
-              html += '  <li class="info-item">';
-              html += '    <span class="info-title">Participants:</span>';
-              html += '    <span class="amount">' + response.data[i].count + '</span>';
-              html += '  </li>';
-              html += '</ul>';
-              html += '<h4 class="title"><a href="blog-details.html?id=' + response.data[i].id + '">' + response.data[i].name + '</a>';
-              html += '</h4>';
-              html += ' <p>' + projectSummary.substr(0, 200) + '...</p >';
-              html += '</div>';
-              html += '<div class="causes-footer">';
-              html += ' <div class="admin">';
-              html += '</div>';
-              html += '     <a class="btn-theme btn-border-gradient gray-border btn-size-md" href="blog-details.html?id=' + response.data[i].id + '""><span>Read Now <img';
-              html += '       class="icon icon-img" src="assets/img/icons/arrow-line-right-gradient.png"';
-              html += '       alt="Icon"></span></a>';
-              html += ' </div>';
-              html += '    </div>';
-              html += '  </div>';
-              $('#blog_post_list').empty().append(html);
-            }
-
-          }
-        }
-        , { access_token: token });
-    };
-  </script>
+  <script src="assets/js/fb-albums.js"></script>
   <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js"></script>
 
 </body>
