--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
                   <div class="separator-line">
                     <img src="assets/img/shape/line-s1.png" alt="Givest-HasTech">
                   </div>
-                  <p>: Leos develop positive
+                  <p>Leos develop positive
                     character traits and receive recognition
                     for their contributions.</p>
                   <!-- <a href="causes-details.html" class="btn-theme btn-white btn-border btn-size-md">View Details <img
@@ -327,20 +327,20 @@
             </div>
             <div class="col-lg-6 col-xl-5">
               <div class="about-content" data-aos="fade-up" data-aos-duration="1100">
-                <p class="text-style">Lorem Ipsum is simply dummy text of the printing and typesetting industry has been
-                  the industry standard.</p>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry orem Ipsum has been the
-                  industry's standard dummy text ever since the 1500s, when an unknown.</p>
-                <p class="mb-0">Lorem Ipsum is simply dummy text of the printing and typesetting industry orem Ipsum has
-                  been the industry's standard dummy text ever since the 1500s, when an unknown.</p>
+                <p class="text-style">The power to turn a vision into reality is what makes a person a leader.</p>
+                <p>The Moratuwa-Rathmalana Leo Club is one of the greatest in Leo District 306 A1. From the beginning, Sri Lanka has been
+                associated with Leo Multiple District 306, Sri Lanka.          
+                The Leo Club of Moratuwa-Rathmalana was founded on June 12, 1970, with the Lions Club of Moratuwa-Rathamalana in
+                District 306 A1 providing sponsorship.</p>
+                <p class="mb-0">So far, we've accomplished a lot under the leadership and guidance of many people, and we're still committed to
+                maintaining our high standards with 50+ years of excellence.</p>
                 <ul class="list-icon-style">
-                  <li><img class="icon-img" src="assets/img/icons/check-double-line.png" alt="Image-Givest"> Need your
-                    simple help <br>for save children.</li>
+                  <li><img class="icon-img" src="assets/img/icons/check-double-line.png" alt="Image-Givest"> 
+                    Right decision shows  <br>excellent leadership.</li>
                   <li class="line-center"></li>
-                  <li><img class="icon-img" src="assets/img/icons/check-double-line.png" alt="Image-Givest"> Need your
-                    simple help <br>for save children.</li>
+                  <li><img class="icon-img" src="assets/img/icons/check-double-line.png" alt="Image-Givest"> By the community,  <br>for the community.</li>
                 </ul>
-                <a href="#/" class="btn-theme btn-gradient btn-slide">Donate Now <img class="icon icon-img"
+                <a href="contact.html" class="btn-theme btn-gradient btn-slide">Contact Us <img class="icon icon-img"
                     src="assets/img/icons/arrow-line-right2.png" alt="Icon"></a>
               </div>
             </div>
@@ -375,7 +375,7 @@
             <div class="col-md-12 col-lg-4 col-xl-5">
               <div class="title-wrp" data-bg-img="assets/img/testimonial/bg-testi1.jpg">
                 <div class="section-title">
-                  <h5 class="subtitle line-white-color text-white mb-7">Recent Events</h5>
+                  <h5 class="subtitle line-white-color text-white mb-7">Testimonials</h5>
                   <h2 class="title title-style text-white">What People Say About Us. <img class="img-shape"
                       src="assets/img/shape/3.png" alt="Image-Givest"></h2>
                 </div>
@@ -675,56 +675,48 @@
                   <a class="footer-logo" href="index.html">
                     <img src="assets/img/logo.png" alt="Logo">
                   </a>
-                  <p>Lorem Ipsum is simply dummy text of the industry orem Ipsum has been the industry's since the when
-                    unknown.</p>
-                  <div class="widget-total-raised">
+                  <p>The Moratuwa-Rathmalana Leo Club is one of the greatest in Leo District 306 A1, founded on June 12, 1970.</p>
+                  <p>Leo Club of Moratuwa-Rathamalana has been serving the community for over 50 years.</p>
+                  <!-- <div class="widget-total-raised">
                     <h4 class="raised-title">Total Raised:</h4>
                     <div class="raised-amount">$8,965</div>
-                  </div>
+                  </div> -->
                 </div>
               </div>
             </div>
             <div class="col-sm-6 col-md-6 col-lg-4 col-xl-4">
               <div class="widget-item">
-                <h4 class="widget-title line-style">Gallery</h4>
+                <h4 class="widget-title line-style">Social Media</h4>
                 <div class="widget-gallery">
                   <div class="row row-cols-3 row-gutter-10">
                     <div class="col">
                       <div class="gallery-item">
                         <img src="assets/img/photos/gallery1.jpg" alt="Givest-HasTech">
-                        <a class="icon" href="#/"><i class="icofont-instagram"></i></a>
+                        <a class="icon" href="https://www.facebook.com/leoclubofmoratuwarathmalana"><i class="icofont-facebook"></i></a>
                       </div>
                     </div>
                     <div class="col">
                       <div class="gallery-item">
                         <img src="assets/img/photos/gallery2.jpg" alt="Givest-HasTech">
-                        <a class="icon" href="#/"><i class="icofont-instagram"></i></a>
+                        <a class="icon" href="https://www.linkedin.com/company/leo-club-of-moratuwa-ratmalana"><i class="icofont-linkedin"></i></a>
                       </div>
                     </div>
+                    <div></div>
                     <div class="col">
                       <div class="gallery-item">
                         <img src="assets/img/photos/gallery3.jpg" alt="Givest-HasTech">
-                        <a class="icon" href="#/"><i class="icofont-instagram"></i></a>
+                        <a class="icon" href="https://www.instagram.com/mr_leos_/"><i class="icofont-instagram"></i></a>
                       </div>
                     </div>
                     <div class="col">
                       <div class="gallery-item">
                         <img src="assets/img/photos/gallery4.jpg" alt="Givest-HasTech">
-                        <a class="icon" href="#/"><i class="icofont-instagram"></i></a>
+                        <a class="icon" href="https://www.youtube.com/channel/UCjj_tHYJgEfiUk3FwWzN-VQ"><i class="icofont-youtube"></i></a>
                       </div>
                     </div>
-                    <div class="col">
-                      <div class="gallery-item">
-                        <img src="assets/img/photos/gallery5.jpg" alt="Givest-HasTech">
-                        <a class="icon" href="#/"><i class="icofont-instagram"></i></a>
-                      </div>
-                    </div>
-                    <div class="col">
-                      <div class="gallery-item">
-                        <img src="assets/img/photos/gallery6.jpg" alt="Givest-HasTech">
-                        <a class="icon" href="#/"><i class="icofont-instagram"></i></a>
-                      </div>
-                    </div>
+                    
+                    <div></div>
+                    
                   </div>
                 </div>
               </div>
@@ -736,15 +728,15 @@
                   <div class="row">
                     <div class="col-6 col-sm-6 col-md-6 pr-sm-5">
                       <ul class="nav-menu nav">
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="about.html">About Us</a></li>
-                        <li><a href="blog.html">Blog Post Terms</a></li>
-                        <li><a href="#/">Conditions</a></li>
-                        <li><a href="#/">Privacy Policy</a></li>
-                        <li><a href="#/">Documentation</a></li>
-                        <li><a href="#/">Donners</a></li>
+                        <li><a href="projects.html">Projects</a></li>
+                        <li><a href="event-details.html">Events</a></li>
+                        <li><a href="committee.html">Committee</a></li>
+                        <li><a href="contact.html">Contact US</a></li>
                       </ul>
                     </div>
-                    <div class="col-6 col-sm-6 col-md-6 pl-sm-5">
+                    <!-- <div class="col-6 col-sm-6 col-md-6 pl-sm-5">
                       <ul class="nav-menu nav align-right">
                         <li><a href="volunteer.html">Become Volunteer</a></li>
                         <li><a href="#/">Quick Fundraise</a></li>
@@ -753,7 +745,7 @@
                         <li><a href="causes-details.html">Food And Water</a></li>
                         <li><a href="causes-details.html">Medical facilities</a></li>
                       </ul>
-                    </div>
+                    </div> -->
                   </div>
                 </nav>
               </div>
@@ -769,8 +761,8 @@
             <div class="row align-items-center">
               <div class="col-12">
                 <div class="widget-copyright text-center">
-                  <p>copyright © 2021 <span>leos.moratuwaratmalana</span> by <a target="_blank"
-                      href="https://www.leos.moratuwaratmalana.lk">IT crew</a></p>
+                  <p>copyright © 2021 <span>Leo Club of Moratuwa Ratmalana</span> | <a target="_blank"
+                      href="https://www.leos.moratuwaratmalana.lk">Developed MRLeos IT Team</a></p>
                 </div>
               </div>
             </div>
